Reducing the footer indentation

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9492,10 +9492,10 @@ select.single-option-selector option[disabled] {
 }
 
 //footer fix
-.cbb-product-page main {
+.template-product main {
   padding-bottom: 0;
 }
 
-.cbb-product-page .site-footer {
+.template-product .site-footer {
   padding-top: 30px;
 }
