Reducing the footer indentation

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -9149,6 +9149,7 @@ select.single-option-selector option[disabled] {
 
 .template-product .site-footer {
   padding-top: 30px;
+}
 
 .grid-image-fix {
   align-items: unset !important;
