fix cart to shopping bag

--- a/sections/shop-the-look.liquid
+++ b/sections/shop-the-look.liquid
@@ -102,10 +102,10 @@
             <div class="product__add__drawer">
                 <div class="product__add__wrapper">
                     <div class="product__add__text">
-                        <div class="product__add__message">Item added to cart</div>
+                        <div class="product__add__message">Item added to Bag</div>
                         <div class="product__add__buttons hidden">
                             <a href="/checkout" class="btn btn--large uppercase btn--splash">Checkout</a>
-                            <a href="/cart" class="btn btn--large uppercase btn--splash--outline">View Cart</a>
+                            <a href="/cart" class="btn btn--large uppercase btn--splash--outline">View Bag</a>
                         </div>
                     </div>
                 </div>
