--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6401,6 +6401,10 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 
 #AddToCart-product {
   margin-bottom: 7px;
+
+  @media screen and (min-width: 770px) {
+    width: 60%;
+  }
 }
 
 .tooltipster-base {
@@ -6409,7 +6413,7 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 
 @media screen and (min-width: 770px) {
   #smartwishlist div#bookmarkit {
-    width: 50% !important;
+    width: 60% !important;
   }
 }
 
