--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6401,10 +6401,6 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 
 #AddToCart-product {
   margin-bottom: 7px;
-
-  @media screen and (min-width: 770px) {
-    width: 60%;
-  }
 }
 
 .tooltipster-base {
@@ -8505,7 +8501,7 @@ header.site-header .logo--centered-wrapper > a {
     color: $colorHomeLight;
 
     @include at-query ($min, $large) {
-    	width: 65%;
+    	width: 60%; // Button add to cart size
     }
   }
 }
