--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6386,12 +6386,13 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
 #smartwishlist div.bookmarked:before {
   content: "\f004";
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: center;
   margin-right: 8px;
   font-size: 15px;
   width: 18px;
   height: 18px;
+  line-height: 15px;
   font-family: 'FontAwesome', sans-serif;
 }
 
