--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1200,7 +1200,7 @@ body:not(.template-index){
 }
 .main-content {
   display: block;
-  padding-bottom: $gutter * 4;
+  padding-bottom: 40px;
 }
 
 
@@ -5685,6 +5685,7 @@ Collection grid section
   font-size: .9rem;
   letter-spacing: 2.1px;
   font-weight: 700;
+  margin-bottom: 24px;
 }
 
 .footer-secondary,
@@ -5992,7 +5993,7 @@ label.quatity-selector{
 .collection{
   background: $colorBody;
   padding-top: $gutter*2;
-  padding-bottom: $gutter*4;
+  padding-bottom: 30px;
   .main-content{ padding-bottom: 0; }
 }
 .template-collection .main-content{
@@ -6546,7 +6547,7 @@ p.size-guide-link a:hover {
 ==============================================================================*/
 .blog{
   background-color: $colorBody;
-  padding-bottom: $gutter*4;
+  padding-bottom: 40px;
 }
 .template-blog .main-content{
   padding-bottom: 0;
@@ -9147,7 +9148,7 @@ select.single-option-selector option[disabled] {
   padding-bottom: 0;
 }
 
-.template-product .site-footer {
+.site-footer {
   padding-top: 30px;
 }
 
