wishlist button bugfix

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6444,6 +6444,7 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
   width: 18px;
   height: 18px;
   margin-right: 8px;
+  margin-top: 3px;
 }
 
 #smartwishlist div.bookmarked:before {
