--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6381,6 +6381,7 @@ li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product
   width: 18px;
   height: 18px;
   margin-right: 8px;
+  margin-top: 3px;
 }
 
 #smartwishlist div.bookmarked:before {
