add notify me and x left select

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -218,5 +218,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
  {% include 'smile-initializer' %}
 
-{% include 'subscribe-it-helper' %}</body>
+{% include 'subscribe-it-helper' %}
+</body>
 </html>
