changed notify-me padding, select size colour

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9630,11 +9630,12 @@ ul {
 
 .out-of-stock .size, .out-of-stock .notify-me-btn {
   color: rgba(118, 118, 118, 0.85);
-  padding-right: 2px;
+  padding-right: 3px;
 }
 
 .select-input::placeholder {
   text-transform: lowercase;
+  color: #484646;
 }
 
 .x-left {
