changed hover option background

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -9606,7 +9606,7 @@ ul {
 }
 .dropdown .options .option:hover {
   color: white;
-  background: #1e90ff;
+  background: #d7d7d7;
 }
 .dropdown.opened .options {
   opacity: 1;
