--- a/snippets/nav-contents.liquid
+++ b/snippets/nav-contents.liquid
@@ -55,7 +55,7 @@
             <form action="/search" method="get" class="input-group search" role="search">
                 {% if section.settings.search_only_products %}<input type="hidden" name="type" value="product">{% endif %}
                 <button type="submit" class="btn search-btn">SEARCH</button>
-                <input class="search-bar" type="search" name="q" placeholder="search term">
+                <input class="search-bar" type="search" name="q" placeholder="Search term">
             </form>
         </div>
 
