--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -68,19 +68,19 @@
             </div>
           {% endif %}
         </div>
+        {% if section.settings.header_enable_search %}
+          <div class="info-bar-search desktop">
+            <form action="/search" method="get" class="input-group search" role="search">
+              {% if section.settings.search_only_products %}<input type="hidden" name="type" value="product">{% endif %}
+              <button type="submit" class="btn search-btn">SEARCH</button>
+              <input class="search-bar" type="search" name="q" placeholder="search term">
+            </form>
+          </div>
+        {% endif %}
       </div>
     </div>
   {% endif %}
 
-  {% if section.settings.header_enable_search %}
-    <div class="info-bar-search">
-      <form action="/search" method="get" class="input-group search" role="search">
-        {% if section.settings.search_only_products %}<input type="hidden" name="type" value="product">{% endif %}
-        <button type="submit" class="btn search-btn">SEARCH</button>
-        <input class="search-bar" type="search" name="q" placeholder="search term">
-      </form>
-    </div>
-  {% endif %}
 
   <header class="site-header {{ section.settings.height }}" role="banner">
     <div class="wrapper">
