--- a/snippets/nav-contents.liquid
+++ b/snippets/nav-contents.liquid
@@ -63,6 +63,8 @@
             function searchToggle() {
                 if ($('.mobile-search__wrapper')) {
                     $('.mobile-search__wrapper').toggleClass('open');
+                    $('.mobile-search__wrapper .search-bar').focus();
+
                 }
             }
         </script>
