--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2873,7 +2873,7 @@ $infoBarPadding: 11px;
     .search-bar {
       outline: none;
       width: 100%;
-      text-align: right;
+      text-align: left;
       padding: 0 0 3px;
       margin: 0;
       height: 18px;
@@ -3023,7 +3023,7 @@ ul.main-menu #menu-account-link {
 
   .mobile-search__wrapper {
     top:76px;
-    background-color:#E8E8E8;
+    background-color:#fff;
     position:absolute;
     left: -15px;
     width: calc(100% + 30px);
@@ -3119,6 +3119,7 @@ ul.main-menu #menu-account-link {
     padding: 0;
     margin-bottom: 10px;
     height: auto;
+    display: none;
   }
 
   .mobile-search__wrapper .btn-close {
