--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -9229,3 +9229,24 @@ select.single-option-selector option[disabled] {
     }
   }
 }
+
+// Fix tracker of the img recommendation results
+.ss__theme {
+  .ss__results {
+    .ss__result {
+      .ss__result__image {
+        .ss__result__image__link {
+          .ss__result__image__wrapper {
+            padding-bottom: 150% !important;
+
+            img {
+              height: 100% !important;
+              object-fit: cover;
+              object-position: top;
+            }
+          }
+        }
+      }
+    }
+  }
+}
