--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2856,6 +2856,7 @@ $infoBarPadding: 11px;
       font-size: 0.8em;
       line-height: 1.4;
       width: 73px;
+      display: none;
     }
 
     &.open {
