--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -177,7 +177,7 @@
 }
 
 .hero, .new-releases-shop-loungewear {
-    background-position: center;
+    background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 27px 0 185px;
@@ -620,7 +620,7 @@
 .new-releases-shop-loungewear {
     padding: 22px 0 258px;
     margin-bottom: 55px;
-    background-position: 20% 50%;
+    background-position: 50%;
 
     @media (min-width: 481px) {
         margin-bottom: 80px;
