--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -624,7 +624,8 @@
 
     @media (min-width: 481px) {
         margin-bottom: 80px;
-        background-position: 50% 70%;
+        background-position: 80% 70%;
+        background-size: 115%;
     }
 
     @media (min-width: 768px) {
